# hybrid-Lambda

./: .circle.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  README.md  TODO  bootstrap  circle.yml  configure.ac  old_Makefile  version
.circleci/: config.yml
.travis/: deploy.sh
doc/: Makefile.am  article.bib  branch.eps  manual.bbl  manual.blg  manual.tex  multi_in_net_tikz_fig.tex  multi_in_net_tikz_fig_color.tex  net1-figure0.eps  net1.tex  net_pipe.tex  sim_manual.tex
example/: eg_help  eg_plot_dot  eg_plot_tex  eg_sim_freq_gt  eg_sim_gt  eg_sim_mono  eg_sim_multi_gt  eg_sim_mut  eg_sim_pop  eg_sim_save_gt
src/: .gitmodules  Makefile  Makefile.am  all_gene_topo.cpp  all_gene_topo.hpp  boost_math.cpp  checkfiles.sh  figure.cpp  figure.hpp  freq.cpp  freq.hpp  fst.cpp  fst.hpp  global.hpp  hybrid-Lambda  hybridLambda.cpp  hybridLambda.hpp  main.cpp  net.cpp  net.hpp  node.cpp  node.hpp  old_figure.cpp  param.cpp  param.hpp  regular_math.cpp  regular_math.hpp  seg-site.cpp  seg-site.hpp  sim_gt.cpp  sim_gt.hpp  useless.cpp  utility.cpp  utility.hpp
src/binomial/: add_lvalue_reference.hpp  add_reference.hpp  add_rvalue_reference.hpp  addressof.hpp  adl_barrier.hpp  alignment_of.hpp  alt_sstream.hpp  always.hpp  apply_fwd.hpp  array.hpp  assert.hpp  at.hpp  back_inserter.hpp  base_from_member.hpp  begin_end.hpp  beta.hpp  beta_tmp.hpp  big_constant.hpp  bind.hpp  bind_fwd.hpp  binomial.hpp  bool.hpp  bool_fwd.hpp  bool_trait_def.hpp  bounds.hpp  calculate_constants.hpp  cast.hpp  comparison_op.hpp  compat_workarounds.hpp  config.hpp  constants_tmp.hpp  conversion_traits.hpp  converter.hpp  converter_policies.hpp  cstdint.hpp  cv_traits_impl.hpp  detail_bounds.hpp  erf.hpp  error_handling.hpp  eval_if.hpp  (+217 more)
src/binomial/smart_ptr/detail/: sp_counted_base_acc_ia64.hpp  sp_counted_base_aix.hpp  sp_counted_base_cw_ppc.hpp  sp_counted_base_cw_x86.hpp  sp_counted_base_gcc_ia64.hpp  sp_counted_base_gcc_mips.hpp  sp_counted_base_gcc_ppc.hpp  sp_counted_base_gcc_sparc.hpp  sp_counted_base_gcc_x86.hpp  sp_counted_base_nt.hpp  sp_counted_base_pt.hpp  sp_counted_base_snc_ps3.hpp  sp_counted_base_solaris.hpp  sp_counted_base_spin.hpp  sp_counted_base_sync.hpp  sp_counted_base_vacpp_ppc.hpp  sp_counted_base_w32.hpp  sp_typeinfo.hpp
src/boost/: config.hpp  cstdint.hpp
src/boost/math/special_functions/: binomial.hpp
src/boost/math/special_functions/detail/: lanczos_sse2.hpp
src/debug/: net_debug.cpp  node_debug.cpp
src/extra/: freq_extra.cpp  node_extra.cpp
src/old/: all_gene_topo.cpp  all_gene_topo.hpp  freq.cpp  freq.hpp  net_old.cpp  node_old_functions.cpp  useless.cpp
src/tests/: test_figure.cpp  test_hybridLambda.cpp  test_runner.cpp
tests/: checkbinary.sh
tests/caterpillar_test/: 3tax_caterpillar  6tax_caterpillar  7tax_caterpillar  8tax_caterpillar  count_freq_tests.sh
tests/fst/: .gitignore  compute_fst.sh  compute_fst_psi.sh  hybridLambda_fst.r  run.r
tests/fst/use_arlequin/: current_arlequin.arp  fst_setting.ars  hybridLambda_fst.r  run.sh
tests/kingman_coal/: bl_r.src  ks_r.src  ms_vs_hybridLambda_demo.sh  process_sample_stats.src  test_tmp.sh  tmrca_r.src
tests/unittest/: test_hybridLambda.cpp  test_simGt.cpp
trees/: 10_tax_gt1  10_tax_sp_nt1_para02_bl06  11_tax_sp_nt1_para02_bl06  12_tax_sp_nt1_para02_bl06  13_tax_sp_nt1_para02_bl06  14_tax_sp_nt1_para02_bl06  15_tax_sp_nt1_para02_bl06  2_tax_loop_nt_para  2_tax_sp1  2_tax_sp1_gener_num  2_tax_sp1_para  2_tax_sp1_para2  2_tax_sp1_pop1  3_tax_complex1  3_tax_gt2.tre  3_tax_multi_tax_test_hybrid0  3_tax_multi_tax_test_hybrid1  3_tax_multi_tax_test_hybrid2  3_tax_multi_tax_test_hybrid3  3_tax_multi_tax_test_hybrid4  3_tax_nt1  3_tax_s.tre  3_tax_s.tre.alt  3_tax_sp_nt1  3_tax_sp_nt2  3_tax_sp_nt3  3_tax_sp_nt3_bl100  3_tax_sp_nt4  3_tax_sp_nt5  3_tax_st1.tre  3_tax_st2.tre  4_tax_blah.tre  4_tax_complex1  4_tax_gt1.tre  4_tax_gt10.tre  4_tax_gt11.tre  4_tax_gt12.tre  4_tax_gt14.tre  4_tax_gt15.tre  4_tax_gt2.tre  (+167 more)
