bin_PROGRAMS = hybrid-Lambda
PROG = HYBRID-LAMBDA
#hybrid_Lambda_CXXFLAGS=  -O3 -g 
hybrid_Lambda_CXXFLAGS= -O3 -g -DNDEBUG #options for not showing debug messages.

hybrid_Lambda_SOURCES = param.hpp param.cpp \
node.hpp node.cpp \
net.hpp net.cpp \
all_gene_topo.cpp  all_gene_topo.hpp \
sim_gt.cpp  sim_gt.hpp  \
freq.cpp  freq.hpp \
utility.cpp  utility.hpp mtrand.cpp \
main.cpp  \
figure.cpp figure.hpp \
seg-site.cpp seg-site.hpp 

include_HEADERS = all_gene_topo.hpp seg-site.hpp sim_gt.hpp freq.hpp utility.hpp mtrand.h param.hpp node.hpp net.hpp


